--- a/TheExpanseRPG/UserControls/CharacterAsListItem.xaml
+++ b/TheExpanseRPG/UserControls/CharacterAsListItem.xaml
@@ -25,7 +25,7 @@
 
         <!--<Border x:Name="backgroundBorder" Grid.ColumnSpan="10" Grid.RowSpan="10" BorderThickness="1" BorderBrush="{StaticResource EXPLightBlueBrush}"/>-->
 
-        <Image Source="{Binding Character.Avatar}"/>
+        <Image Source="{Binding Character.Avatar}" Stretch="Fill"/>
         <Grid Grid.Column="1" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
